[package]
name = "rates"
version = "0.1.0"
authors = ["lunush"]
edition = "2018"
description = "CLI tool to get currency exchange rates in your terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = "*"
serde_json = "*"
clap = "2.33"
directories = "3.0"
chrono = "0.4"
