[package]
name = "rates"
version = "0.2.0"
authors = ["lunush"]
edition = "2018"
description = "CLI tool to get currency exchange rates in your terminal"
license = "Apache-2.0 or MIT"
readme = "README.md"
repository = "https://github.com/lunush/rates"
homepage = "https://rates.rs/"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
categories = ["command-line-interface"]
keywords = ["exchange-rates", "fiat-currency", "cryptocurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
clap = "2.33"
directories = "3.0"
chrono = "0.4"
