[package]
name = "rates"
version = "0.6.0"
authors = ["lunush"]
edition = "2018"
description = "CLI tool to get currency exchange rates in your terminal"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/lunush/rates"
homepage = "https://rates.rs/"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
categories = ["command-line-interface"]
keywords = ["exchange-rates", "fiat-currency", "cryptocurrency"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
directories = "3.0"
chrono = "0.4"
quickxml_to_serde = "0.4"
